# spoor

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  capabilities.md
.github/homebrew/: formula.rb.tmpl
.github/scoop/: spoor.json.tmpl
.github/workflows/: build-and-release.yml  ci.yml  release-bindings.yml  release.yml
benchmarks/: README.md  python.py  python_worker.py  run.sh  wasm-size.sh
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  types.d.ts  wrapper.js
bindings/node/__test__/: binding.test.js
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/spoor/: __init__.py  _native.pyi  exceptions.py  types.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_spoor.py
crates/spoor-cli/: Cargo.toml  LICENSE
crates/spoor-cli/src/: app.rs  cli.rs  main.rs  source.rs
crates/spoor-cli/tests/: adversarial.rs  cli.rs  common.rs  csv.rs  docs.rs  docx.rs  epub.rs  html.rs  ipynb.rs  json.rs  pdf.rs  plain.rs  pptx.rs  xlsx.rs
crates/spoor-cli/tests/build_fixtures/: make_docx.py  make_docx_lists.py  make_ipynb.py  make_misc.py  make_pptx.py
crates/spoor-cli/tests/fixtures/adversarial/: 05_compression_bomb.docx
crates/spoor-cli/tests/fixtures/csv/: 04_gbk.csv  06_quoted.csv  08_pipe.csv  09_ragged.csv  10_large.csv
crates/spoor-cli/tests/fixtures/docx/: 01_basic.docx  02b_lists_numpr.docx  02c_lists_pstyle_only.docx  06_unicode.docx  11_whitespace_runs.docx  12_tracked_changes.docx  13_formatted_whitespace_only_runs.docx  14_merged_table.docx  15_embedded_visual.docx
crates/spoor-cli/tests/fixtures/epub/: 01_basic.epub
crates/spoor-cli/tests/fixtures/html/: 01_article.html  02_cluttered.html  05_scripts_styles.html  06_links.html  07_semantic_blocks.html  08_relative_urls.html
crates/spoor-cli/tests/fixtures/ipynb/: 01_basic.ipynb  06_nbformat3_worksheets.ipynb
crates/spoor-cli/tests/fixtures/plain/: 01_ascii.txt  03_gbk.txt
crates/spoor-cli/tests/fixtures/pptx/: 01_basic.pptx  03_with_notes.pptx  04_empty.pptx  06_merged_table.pptx  07_embedded_visual.pptx  08_image_placeholders.pptx
crates/spoor-cli/tests/fixtures/xlsx/: 04_sparse_merged.xlsx  06_empty.xlsx  08_shared_strings.xlsx
crates/spoor-cli/tests/snapshots/: csv__gbk_encoding_decoded.snap  csv__ragged_rows_padded.snap  csv__rfc4180_quoted_fields.snap  csv__semicolon_delimiter_european_excel.snap  docx__basic_headings_and_inline_formatting.snap  docx__empty_document.snap  docx__formatted_whitespace_only_runs_no_panic.snap  docx__hyperlinks_use_rels_lookup.snap  docx__image_placeholders_follow_document_order_and_only_reference_safe_entries.snap  docx__list_via_pstyle_only.snap  docx__list_via_real_numpr.snap  docx__xml_space_preserve_runs.snap  epub__basic_book_chapters_in_spine_order.snap  html__gbk_html_without_meta_charset.snap  html__links_preserve_href.snap  html__semantic_article.snap  ipynb__nbformat3_worksheets_supported.snap  ipynb__raw_cells_skipped.snap  ipynb__source_can_be_string_or_array.snap  pdf__basic_text_layer.snap  pptx__basic_slides_with_titles_and_bullets.snap  pptx__empty_deck_with_blank_slide.snap  pptx__image_placeholders_follow_slide_order_and_only_reference_safe_entries.snap  pptx__slide_ordering_handles_double_digits.snap  xlsx__basic_sheet_as_gfm_table.snap  xlsx__cell_types_numbers_dates_bools_formulas.snap  xlsx__empty_workbook.snap  xlsx__multiple_sheets_with_empty_one.snap  xlsx__shared_strings_resolve_correctly.snap
crates/spoor-core/: Cargo.toml
crates/spoor-core/benches/: parse.rs
crates/spoor-core/src/: engine.rs  error.rs  json_schema.rs  lib.rs  limits.rs  render.rs  result.rs  source.rs
crates/spoor-core/src/detect/: mod.rs
crates/spoor-core/src/parse/: csv.rs  docx.rs  epub.rs  html.rs  ipynb.rs  mod.rs  pdf.rs  pdf_layout.rs  pdf_media.rs  pdf_tables.rs  plain.rs  pptx.rs  url.rs  xlsx.rs  xml.rs
crates/spoor-core/src/parse/pdf_engine/: NOTICE.md  mod.rs
crates/spoor-core/tests/: api.rs
crates/spoor-wasm/: Cargo.toml  package.json
crates/spoor-wasm/src/: lib.rs
docs/: ENGINEERING_DECISIONS.md  PLAN.md  PRODUCT_ROADMAP.md  capabilities.md
docs/test-matrix/: README.md  adversarial.md  csv.md  docx.md  epub.md  html.md  pdf.md  plain.md  xlsx.md
docs/v1/: README.md
examples/agent-spoor/: README.md
examples/agent-spoor/rust/: .env.example  .gitignore  Cargo.toml  README.md
examples/agent-spoor/rust/data/: sales.csv  with-image.docx
examples/agent-spoor/rust/src/: agent.rs  lib.rs  main.rs  mcp_server.rs  model.rs  provider.rs  shell.rs  spoor_tools.rs  tools_base.rs  validate.rs
examples/agent-spoor/rust/src/providers/: mcp.rs  mod.rs  native.rs  skill.rs
examples/agent-spoor/rust/tests/: smoke.rs
examples/answer-trace/: .gitignore  README.md  Taskfile.yml  package.json  pnpm-lock.yaml
examples/answer-trace/apps/api/: .env.example  pyproject.toml
examples/answer-trace/apps/api/app/: config.py  main.py
examples/answer-trace/apps/api/app/data/: byd.md
examples/answer-trace/apps/api/app/routers/: ask.py  demo.py  media.py  upload.py
examples/answer-trace/apps/api/app/services/: cf.py  corpus.py  locate.py  matcher.py  media_urls.py  parsing.py  store.py  tokens.py
examples/answer-trace/apps/api/tests/: test_locate.py
examples/chat-with-local-file/: README.md  app.js  index.html  package.json  styles.css
examples/cloudflare-pages/: README.md  index.html  package-lock.json  package.json  vite.config.js  wrangler.toml
examples/cloudflare-worker/: README.md  package-lock.json  (+2 more)
examples/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-desktop/src-tauri/capabilities/: default.json
examples/tauri-desktop/src-tauri/src/: lib.rs  main.rs
scripts/: bump-version.py  check-release-version.py
src/: app.rs  cli.rs  error.rs  extract.rs  format.rs  json_schema.rs  lib.rs  limits.rs  main.rs  output.rs  render.rs  source.rs
tests/: adversarial.rs  cli.rs  common.rs  csv.rs  docs.rs  docx.rs  epub.rs  html.rs  ipynb.rs  json.rs  pdf.rs  plain.rs  pptx.rs  xlsx.rs
(+255 files in other folders)
