[workspace]
resolver = "2"
members = [
    "crates/spoor-core",
    "crates/spoor-cli",
    "crates/spoor-wasm",
    "bindings/python",
    "bindings/node",
    "examples/tauri-core",
]
default-members = [
    "crates/spoor-core",
    "crates/spoor-cli",
]

[workspace.package]
version = "0.8.8"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/harrisonwang/spoor"
homepage = "https://github.com/harrisonwang/spoor"
authors = ["harrisonwang <harrisonwang.dev@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spoor-core = { path = "crates/spoor-core", version = "0.8.8" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
