[package]
name = "pyspoor-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Python native bindings for spoor-core"
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
spoor-core.workspace = true
serde_json.workspace = true
pyo3 = { version = "0.27", features = ["abi3-py39", "extension-module"] }
