[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "pyspoor"
version = "0.8.8"
description = "Python bindings for the deterministic spoor document engine"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "harrisonwang", email = "harrisonwang.dev@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[tool.maturin]
module-name = "spoor._native"
python-source = "."
features = ["pyo3/abi3-py39"]
exclude = ["spoor/__pycache__/**", ".pytest_cache/**"]
