[package]
name = "spoor-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Deterministic, embeddable document parsing engine for LLM-friendly output"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["documents", "markdown", "llm", "parser", "embedded"]
categories = ["text-processing", "parser-implementations"]

[features]
default = ["all-formats"]
all-formats = ["pdf", "office", "epub", "html", "tables", "notebook"]
core-formats = ["office", "html", "tables"]
pdf = [
    "dep:adobe-cmap-parser",
    "dep:euclid",
    "dep:lopdf",
    "dep:postscript",
    "dep:type1-encoding-parser",
    "dep:unicode-normalization",
]
office = ["dep:quick-xml"]
epub = ["dep:quick-xml", "html"]
html = ["dep:scraper"]
tables = ["dep:calamine", "dep:csv"]
notebook = []

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
encoding_rs = "0.8"
chardetng = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.36", optional = true }
calamine = { version = "0.26", optional = true }
csv = { version = "1.3", optional = true }
scraper = { version = "0.20", optional = true }
adobe-cmap-parser = { version = "0.4.1", optional = true }
euclid = { version = "0.20.5", optional = true }
lopdf = { version = "0.34", default-features = false, features = ["nom_parser"], optional = true }
postscript = { version = "0.14", optional = true }
type1-encoding-parser = { version = "0.1.0", optional = true }
unicode-normalization = { version = "0.1.19", optional = true }

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }

[[bench]]
name = "parse"
harness = false
