[package]
name = "spoor-tauri-desktop-example"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "spoor_tauri_desktop_example"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
spoor-core = { path = "../../../crates/spoor-core" }
tauri = { version = "2", features = [] }

[workspace]
